# PerpInfra

./: Cargo.toml
config/: default.toml  production.toml
src/: controls.rs  error.rs  lib.rs  main.rs
src/api/: auth.rs  mod.rs  rate_limit.rs  rest.rs  websocket.rs
src/config/: fees.rs  funding.rs  loader.rs  market.rs  mod.rs  risk.rs
src/core/: event_processor.rs  mod.rs  state_machine.rs
src/event_log/: consumer.rs  mod.rs  producer.rs  snapshot.rs  snapshot_manager.rs
src/events/: balance.rs  base.rs  funding.rs  liquidation.rs  mod.rs  order.rs  price.rs  trade.rs
src/funding/: applicator.rs  mod.rs  payment_calculator.rs  rate_calculator.rs  ticker.rs
src/interfaces/: balance_provider.rs  event_producer.rs  mod.rs  order_submitter.rs
src/invariants/: checks.rs  kill_switch.rs  mod.rs  monitor.rs
src/liquidation/: detector.rs  executor.rs  insurance_fund.rs  mod.rs  priority_queue.rs  rate_limiter.rs
src/matching/: matcher.rs  mod.rs  order_book.rs  self_trade.rs  validator.rs
src/observability/: logging.rs  metrics.rs  mod.rs  tracing.rs
src/price_infra/: aggregator.rs  circuit_breaker.rs  mod.rs
src/replay/: audit_trail.rs  compliance.rs  explainability.rs  mod.rs  regulatory.rs  replayer.rs  retention.rs
src/risk/: margin.rs  mod.rs  pnl.rs  pre_trade_check.rs
src/settlement/: accounts.rs  balance_manager.rs  ledger.rs  mod.rs  position_manager.rs  reconciliation.rs
src/types/: account.rs  balance.rs  funding_rate.rs  ids.rs  mod.rs  position.rs  price.rs  quantity.rs  ratio.rs  timestamp.rs
src/utils/: helper.rs  mod.rs  (+1 more)
(+4 files in other folders)
