[package]
name = "PerpInfra"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Event log (Kafka)
rdkafka = { version = "0.39.0", features = ["cmake-build"] }

# Serialization
prost = "0.12"  # Protocol Buffers
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Numerical types
num-traits = "0.2"
num-bigint = "0.4"

# Data structures
im = "15.1"  # Immutable data structures
dashmap = "5.5"  # Concurrent HashMap

# HTTP/WebSocket
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
tokio-tungstenite = "0.21"

# Observability
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = "0.21"
opentelemetry-prometheus = "0.14"

# Configuration
config = "0.14"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
lz4 = "1.24"

# Testing
proptest = "1.4"  # Property-based testing
quickcheck = "1.0"
criterion = "0.5"
async-trait = "0.1.89"
futures-util = "0.3.31"
lazy_static = "1.5.0"
sha2 = "0.11.0-rc.4"
hex = "0.4.3"  # Benchmarking

[dev-dependencies]
mockall = "0.12"
wiremock = "0.6"

[build-dependencies]
prost-build = "0.12"